[UPDATE] Class consistency, some warning fixed